# secure_memory

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/secure_memory/: BaseN.h  Buffer.h  BufferRange.h  DevNull.h  ISerializable.h  Range.h  SafeInt.h  SecureUniquePtr.h  Serializable.h  SplitMix64.h  String.h  _conversions_crossplatform.h  conversions.h  helper.h
src/: Buffer.cpp  DevNull.cpp  SecureUniquePtr.cpp  String.cpp
test/: BaseNTest.cpp  BaseNTest.h  BufferTest.cpp  BufferTest.h  CMakeLists.txt  ConversionTest.cpp  ConversionTest.h  DevNullTest.cpp  SafeIntTest.cpp  SafeIntTest.h  StringTest.cpp  StringTest.h  custom_assert.h
